@@ -75,6 +75,8 @@ PHP                                                                        NEWS
   . Fixed bug #53872 (internal corruption of phar). (Hannes)
 
 - PHP-FPM SAPI:
+  . Backported FR #55166 from 5.4 branch (Added process.max to control
+    the number of process FPM can fork). (fat)
   . Backported FR #55181 from 5.4 branch (Enhance security by limiting access
     to user defined extensions). (fat)
   . Backported FR #54098 from 5.4 branch (Lowered process manager
